fix overflow

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -59,10 +59,21 @@
 }
 
 .infodestruction {
+  position: sticky;
+  top: 20px;
   background: #175c6c;
   border-radius: 20px;
   padding: 20px;
   margin: 20px 0;
+  display: flex;
+  flex-direction: column;
+  max-height: calc(100vh - 40px);
+}
+.infotext.scrollable {
+  overflow-y: auto;
+  max-height: 250px;
+  padding-right: 10px;
+  word-wrap: break-word;
 }
 
 .infotitle {
